--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>1-B 予約サイト</title>
+    <link rel="stylesheet" href="https://unpkg.com/ress@4.0.0/dist/ress.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300&display=swap" rel="stylesheet">
@@ -29,9 +30,7 @@
         予約された時間の１分前にはご来店ください。時間を過ぎた瞬間その予約は無効となります。<br>
         このWebページのリンクを外部に公開することを固く禁止します。また予約フォームで住所などの個人情報の送信は絶対にしないでください。</p>
     </div>
-    <div class="form">
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfMpkD1X0Y6es9o3naEsAUUikO1xoLBqctTyIvlSBxArzxbWQ/viewform?embedded=true" width="95%" height="1660px" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
-    </div>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfMpkD1X0Y6es9o3naEsAUUikO1xoLBqctTyIvlSBxArzxbWQ/viewform?embedded=true" width="95%" height="1660px" frameborder="0" marginheight="0" marginwidth="0">読み込んでいます…</iframe>
     <footer><p><small>&copy; 2022 : 9/10 - 9/11   1-B</small></p></footer>
   </body>
 </html>
